--- a/postgraduate/word/simple-word/markdown/p12-p14.md
+++ b/postgraduate/word/simple-word/markdown/p12-p14.md
@@ -8,11 +8,11 @@
     - art- 连接
     - 物品的一件
         - ...<u>instead of</u> Shopping alone, one article of clothing at a time（次数）. 不要一个人去购物，也不要一次只买一件衣服
-            - instead of == rather than 而不是（选择前边而不选择后边）
+            - A instead of B == A rather than B 而不是（选择前边而不选择后边）
 - forest
     - n. 森林
 - immediate
-    - adj. 立即的，即刻的；直接的；紧靠的
+    - adj. 立即的，即刻的；直接的；紧靠的 [ɪˈmiːdiət]
     - medi- 中间的
     - 立即的，马上的
         - Because electronic payments(电子支付) are immediate，they eliminate(v.消除) the float for the consumer.
@@ -163,7 +163,7 @@
 - enter
     - vt. 进入，参加，登录 vi. 进入
     - entry n. 进入
-    - entrance n. 入口 v./n. 进入
+    - entrance n. 入口 v./n. 进入 [ˈentrəns]
     - enter vs entrance
         - enter 具体的进入
         - entrance 抽象的进入，Case: 入学
@@ -221,11 +221,11 @@
     - 赶上 catch up
         - while still <u>catching up</u> in some spheres of modern life... 在现代生活的某些领域仍在努力追赶
 - colleague
-    - n. 同事
+    - n. 同事 [ˈkɑːliːɡ]
     - college
 - easily
 - exercise
-    - n. 锻炼，练习
+    - n. 锻炼，练习 [ˈeksərsaɪz]
     - erc- 力量
 - hot
     - adj. 热的
@@ -258,7 +258,7 @@
         - introduce sth. into 把...引进到
 - baby
 - dioxide
-    - n. 二氧化碳
+    - n. 二氧化碳 [daɪˈɑːksaɪd]
     - **carbon dioxide**
 - eventually
     - adv. 最后地
@@ -277,7 +277,7 @@
         - wealthy adj. 富有的
 - himself
 - journalist
-    - n. 记者
+    - n. 记者 [ˈdʒɜːrnəlɪst]
     - journal n. 期刊
 - let
     - vt. 允许，让
@@ -298,10 +298,12 @@
     - waitress n. 女服务员
     - actor, actress
 - conversation
-    - n. 交谈
+    - n. 交谈 [ˌkɑːnvərˈseɪʃn]
 - aspect
-    - n. 样貌；方面
+    - n. 样貌；方面 [ˈæspekt]
     - First，scientific work(研究) <u>tends to(往往)</u> focus on some aspect of prevailing(盛行的) knowledge...
+    - facade n. 外表; 虚伪，假象
+      - Facade Pattern 门面模式
 - farm
     - n. 农场
     - farmer n. 农场主，农民
@@ -383,7 +385,7 @@
     - vi. 选择，挑选；采摘
     - I can pick a date from the past 53 years.
 - rapidly
-    - adv. 迅速地；快速地
+    - adv. 迅速地；快速地 ['ræpɪdli]
     - rapid adj. 快速的
 - sit
     - vi. 坐
