--- a/postgraduate/word/simple-word/markdown/p15-p17.md
+++ b/postgraduate/word/simple-word/markdown/p15-p17.md
@@ -47,7 +47,7 @@
     - n. 生活方式；工作方式
 - movement
     - n. 运动
-- phrase
+- phrase [freɪz]
     - n. 短语
     - The phrase "flagged up" is the closest in meaning to... 短语“flagged up”在意思上最接近于...
 - player
@@ -68,7 +68,7 @@
 - room
     - n. 空间
     - .. allow publishers some room to make money.
-- weather
+- weather [ˈweðər]
     - n. 天气，气象；v. 经受住，平安渡过
     - sunny weather
     - v. 经受住
@@ -80,16 +80,16 @@
     - attempt to do sth 尝试做
         - In his work，he attempted to show how all aspects(方面) of culture changed.
     - tempt v. 诱惑
-- annual
+- annual [ˈænjuəl]
     - adj. 每年的，年度的； n. 年报，年刊
     - ann- 年
     - The new vaccine(n. 疫苗), which is different from the annual vaccine.
-    - anniversary n. 周年纪念
+    - anniversary n. 周年纪念 [ˌænɪˈvɜːrsəri]
 - cheap
     - adj. 劣质的；便宜的；
     - affordable/inexpensive 便宜的
     - cheaply adv. 便宜地，廉价地
-- church
+- church [tʃɜːrtʃ]
     - n. 教堂
     - ...they're less likely to go to (the) church，do volunteer work
         - go to church 礼拜
@@ -114,14 +114,14 @@
     - n. **盘子**，碟子；金属板；**板块**
     - 板块
         - The motion of the plates corresponds(对应) to that of the earth's interior(内部的).
-- royal
+- royal [ˈrɔɪəl]
     - adj. 皇家的，王室的
     - aristo-贵族的
     - aristocratic [əˌrɪstəˈkrætɪk] 贵族的
-- secretary
+- secretary [ˈsekrəteri]
     - n. 秘书，大臣，部长
     - cert- 搞清
-        - secret adj. 秘密的，机密的 n. 秘密
+        - secret [ˈsiːkrət] adj. 秘密的，机密的 n. 秘密
         - certain adj. 肯定
 - shape
     - n. 外形；状态； vt. 形成，使成形
@@ -156,12 +156,12 @@
     - active adj. 活跃的
 - citizen
     - n. 市民，公民
-- editor
+- editor [ˈedɪtər]
     - n. 编辑，编者
     - edit vt. 编辑；剪辑
         - Moral(道德) awareness(意识) matters in editing a newspaper. 道德意识在编辑报纸时很重要
-    - edition n. 版本
-- fuel
+    - edition [ɪˈdɪʃn] n. 版本 
+- fuel [ˈfjuːəl]
     - n. 燃料；v. 给...加燃料
     - v. 给...加燃料
         - You'd think this might fuel the efficiency(效率) mind. 你可能会认为这会促进效率思维
@@ -169,7 +169,7 @@
     - n. 邮件
 - match
     - n. 匹配，比赛
-    - Few culinary(否、烹饪的) pleasures can match it. 很少有美食能与之媲美
+    - Few culinary([ˈkʌlɪneri] 否、烹饪的) pleasures can match it. 很少有美食能与之媲美
 - root
     - n. 根部 v. 生根
     - take root in 扎根于
@@ -184,7 +184,7 @@
 - speech
     - n. 讲话，演说
     - speech contests
-- wave
+- wave [weɪv]
     - n. 波浪；波动
     - Scientists in one wave after another try to awaken us to the growing threat of global warming.
       一波又一波的科学家试图唤醒我们，让我们意识到全球变暖日益增长的威胁
@@ -196,7 +196,7 @@
     - vi. 到达；来临
     - arrive vs reach
         - reach vt.: I have reached my school.
-        - arrive vi. + prep.
+        - arrive vi. + prep.: I arrived.
     - arrive in + 某个范围: arrive in ChangChun
     - arrive at + 具体的地点: arrive at ChangChun station
     - arrive at/in 达到，达成
@@ -213,17 +213,17 @@
         - in danger 处于危险当中
         - The church reminded worshippers(信徒) that their souls(灵魂) were in danger.
     - dangerously adv. 危险地
-- diet
+- diet [ˈdaɪət]
     - n. 日常饮食； vi. 节食
     - et- 小东西
         - wallet 钱包
-        - bullet 子弹
+        - bullet [ˈbʊlɪt] 子弹
     - dietary adj. 与饮食相关的，饮食的
     - Mr.Song has studied the <u>diet/dietary</u> habits of 50000 men.
 - double
     - adj. 双倍的，双重的
     - di- 两个
-    - ... agricultural(农业) production in some regions will need to nearly double to keep pace...
+    - ... agricultural([ˌæɡrɪˈkʌltʃərəl] 农业) production in some regions will need to nearly double to keep pace...
 - fly
     - vi. 飞； n. 苍蝇
     - fruit fly 果蝇
@@ -236,12 +236,12 @@
         - gift 广泛的礼物
     - 天赋
         - gifted people<u>**s**</u> 有天赋的种族
-- helicopter
+- helicopter [ˈhelɪkɑːptər]
     - n. 直升机
 - ill
     - adj. **有病的**；不好的（前缀）
     - 不好的
-        - The company is financially(财务上) ill-managed
+        - The company is financially([faɪˈnænʃəlɪ] 财务上) ill-managed
     - illness n. 疾病
 - join
     - v. 参加，加入
@@ -252,7 +252,7 @@
         - mass-market(大众市场) labels such as Zara，H&M，and Uniqlo.
         - mass n. 一团; 大堆; 大量; 块; 民众; 大部分;
     - label...as 把...称为
-        - Today we have a tendency(趋势) to <u>label</u> obesity(肥胖) <u>as</u> a disgrace(耻辱).
+        - Today we have a tendency([ˈtendənsi] 趋势) to <u>label</u> obesity([oʊˈbisəti] 肥胖) <u>as</u> a disgrace([dɪsˈɡreɪs] 耻辱).
 - manner
     - n. 态度，举止；风度；方法，方式
     - man- 手
@@ -264,7 +264,7 @@
     - n. 提纲，轮廓
 - partly
     - adv. 在一定程度上，部分地
-- planet
+- planet [ˈplænɪt]
     - n. 行星
 - plastic
     - n. 塑料(常pl.)；adj. 塑料的
@@ -274,12 +274,12 @@
     - 常规的
         - The robot was the same size as a regular rat.
     - 定期的
-        - Regular advertisements(广告) on radio and television.
+        - Regular advertisements([ˌædvərˈtaɪzmənt] 广告) on radio and television.
 - speed
     - n. 速度，迅速；vt. 加速；
     - vt. 加速
-        - Academic(学术的) research has speeded the process.
-- tough
+        - Academic([ˌækəˈdemɪk] 学术的) research has speeded the process.
+- tough [tʌf]
     - adj. 困难的；强硬的；强壮的
     - 强硬的
         - It needs tougher enforcement. 它需要更严厉的执法
@@ -296,11 +296,11 @@
 - burn
     - v.燃烧； n. 烧伤
     - bur- 燃烧
-    - This suggests that dimmer bulbs(暗淡) burn longer. 这表明，调暗的灯泡燃烧的时间更长
+    - This suggests that dimmer bulbs([bʌlb] 暗淡) burn longer. 这表明，调暗的灯泡燃烧的时间更长
 - complain
     - vi. 抱怨，诉苦
     - com- 共同，一起
-    - People complained that buses were late and infrequent(罕见).
+    - People complained that buses were late and infrequent([ɪnˈfrikwənt] 罕见).
     - complaint n. 抱怨
         - Students have <u>voiced their complaints</u> about homework.
         - voice one's complaint 说明某人的抱怨
@@ -314,9 +314,9 @@
     - look forward to 期望
         - I am looking forward to your reply.
     - put forward 提出
-        - Gerbert Spencer put forward his own theory(理论) of cultural evolution(进化).
+        - Gerbert Spencer put forward his own theory([ˈθiːəri] 理论) of cultural evolution(进化).
     - adj. 向前的
-        - The court's ruling is a step forward(向前的一步) in the struggle(斗争) against corruption(腐败).
+        - The court's([kɔːrt]) ruling is a step forward(向前的一步) in the struggle([ˈstrʌɡl] 斗争) against corruption([kəˈrʌpʃn] 腐败).
     - vt. 转递
 - garden
     - n. 花园
@@ -328,7 +328,7 @@
         - His only thought was to keep the boy from(远离) harm. 他唯一的念头就是保护男孩不受伤害
 - laugh
     - vi. 大笑
-    - laughter n. 笑声
+    - laughter [ˈlæftər] n. 笑声
 - lesson
     - n. 课；**教训**；（pl.）课程
     - lec- 说话
@@ -337,14 +337,14 @@
 - magazine
     - n. 杂志，期刊
     - mag- == mac- == mat- 揉，捏；力量
-    - imagine v. 想象; 猜测; 臆想; 认为
+    - imagine [ɪˈmædʒɪn] v. 想象; 猜测; 臆想; 认为
 - meanwhile
     - adv. 与此同时
         - Meanwhile，it has more than $120 billion...
     - **mean**
         - v. **意味着**
-            - This can mean millions more in revenue(收入). 这意味着更多的收入
-        - n. **平均值** == average
+            - This can mean millions more in revenue([ˈrevənuː] 收入). 这意味着更多的收入
+        - n. **平均值** == average [ˈævərɪdʒ]
             - ... 12-15 points above(多于) the mean value.
         - adj. 吝啬的，小气的
             - She is a mean old woman.
@@ -355,16 +355,16 @@
     - 药物
         - The program has provided enough food and medicine.
     - 医学
-        - Modern medicine has prolonged the physical agony of dying. 现代医学延长了死亡的肉体痛苦
+        - Modern medicine has prolonged the physical([ˈfɪzɪkl]) agony([ˈæɡəni] n. 极度痛苦; 创痛) of dying. 现代医学延长了死亡的肉体痛苦
     - medical adj. 医疗的，药物的
 - party
     - n. **党派**，政党；**当事人**；聚会
     - third-party sellers 第三方销售人员
-    - democratic party 民主党派
+    - democratic([ˌdeməˈkrætɪk]) party 民主党派
 - path
     - n. 小路
     - pathway n. 小路，小径
-- please
+- please [pliːz]
     - vt. 使高兴
     - Be easily pleased
     - pleasure n. 高兴，愉悦
@@ -373,12 +373,12 @@
         - He had such a pleasant, readable style. 他的写作风格令人愉快，读起来很有趣
     - pleasurable adj. 愉快的
         - Pleasurable experiences are pleasant and enjoyable.
-- police
+- police [pəˈliːs]
     - n. 警察部门，警方
     - the police 警方
     - polite adj. 有礼貌的
-    - politics n. 政治，政治学
-    - policy n. 政策
+    - politics [ˈpɑːlətɪks] n. 政治，政治学
+    - policy [ˈpɑːləsi] n. 政策
         - policymaker 政策制定者
 - seat
     - n. 座位； vt. 使...坐下
@@ -388,9 +388,9 @@
 - visit
     - v./n. 参观
     - visitor n. 参观者
-- wage
+- wage [weɪdʒ]
     - n. (常pl.)工资，报酬
-- wall
+- wall [wɔːl]
     - n. 墙
     - the writing/finger is on the wall 厄运即将降临
     - the Great Wall 长城
@@ -400,23 +400,21 @@
         - vacation 假期
         - vacuum n. 真空，v. 用真空吸尘器清扫
     - n. 浪费
-        - Many jobs are boring，unhealthy，and a waste of human potential(n. 潜力).
+        - Many jobs are boring，unhealthy，and a waste of human potential([pəˈtenʃl] n. 潜力).
 - whom
 - wish
     - vt. 希望，愿望（实现的可能性小）
     - wish vs hope
-        - wish to do, wish +从句, wish sb. to do
+        - wish to do, wish +从句, wish sb to do
         - hope to do, hope +从句
-    - I wish/hope him to study hard at English and get better grades next term.
-- ~~watt~~
-    - n. 瓦特
+    - I <u>wish/hope</u> him to study hard at English and get better grades next term.
 - classical
     - adj. 古典的，经典的
 - drop
     - n. 滴，落下；v. 落下，下降
-    - the number of large predators(食肉动物) dropped faster in few fisheries(渔场) than in the old.
+    - the number of large predators([ˈpredətər] 食肉动物) dropped faster in few fisheries(渔场) than in the old.
     - drop out 辍学
-        - Dropping out leads to frustration(挫折) against test taking. 辍学会导致对考试的挫败感
+        - Dropping out leads to frustration([frʌˈstreɪʃn] 挫折) against test taking. 辍学会导致对考试的挫败感
     - 辅音+元音+辅音 -- 双写
         - dropped, sitting, beginning
 - quick
@@ -436,14 +434,14 @@
         - permit 允许
         - emit 排放
     - 允许...进入（被动）
-        - Suppose(假设) your cousin(表哥) LiMing has just <u>been admitted</u> to a university.
+        - Suppose(假设) your cousin([ˈkʌzn] 表哥) LiMing has just <u>been admitted</u> to a university.
     - 承认（主动）
         - Researchers admit that their study does not answer the question...
     - **admission** n. 允许进入；承认
 - adulthood
     - n. 成年
     - hood- 一段时间
-    - You are in adulthood，so you should be a good adult.
+    - You are in adulthood，so you should be a good adult([əˈdʌlt]).
 - belong
     - vi. 属于
     - belong to
@@ -458,12 +456,12 @@
 - column
     - n. 专栏；圆柱
     - column chart 柱状图
-    - ...match each of the numbered items in the left column to its corresponding(相应的) information in the right
+    - ...match each of the numbered items in the left column to its corresponding([ˌkɔːrəˈspɑːndɪŋ] 相应的) information in the right
       column.
-- crop
+- crop [krɑːp]
     - n. 庄稼；收成； vt. 有收成
     - vt. 有收成
-        - the maximum yield(n. 产量) that can be cropped from a fishery(n. 渔场)... 渔业可获得的最大产量...
+        - the maximum([ˈmæksɪməm]) yield(n. 产量) that can be cropped from a fishery([ˈfɪʃəri] n. 渔场)... 渔业可获得的最大产量...
     - crop up 猛增
         - cases began to crop up in New York city...
 - harm
