--- a/postgraduate/word/simple-word/markdown/p21-p23.md
+++ b/postgraduate/word/simple-word/markdown/p21-p23.md
@@ -40,18 +40,18 @@
             - We managed to reach the top of the mountain，and half an hour later we began to <u>ascend(提升, asc)
               /descend(下降, desc)/decline(下降)/plunge(暴跌)</u>.
     - management n. 经营，管理
-- aid
-    - n./vt. 帮助（官方） [eɪd]
+- aid [eɪd]
+    - n./vt. 帮助（官方） 
     - Bolivar had received aid from Haiti(海地)...
     - aide n. 助手 [eɪd]
-- attack
-    - v./n. 袭击；抨击； n. (疾病)突然发作 [əˈtæk]
+- attack [əˈtæk]
+    - v./n. 袭击；抨击； n. (疾病)突然发作 
     - 袭击；抨击
         - Labour(劳动党) is under attack for opposing(反对) development.
     - heart attack 心脏病发作
 - banker
-- barber
-    - n. 理发师（男） [ˈbɑːrbər]
+- barber [ˈbɑːrbər]
+    - n. 理发师（男） 
     - hairdresser 理发师（女）
 - brand
     - n. 烙印，**商标** ；vt. 打烙印于；加商标于
@@ -65,8 +65,8 @@
     - 把...兑现
         - It takes several days before a check is cashed.
             - check n. 支票； v. 检查
-- circuit
-    - n. 电路，线路；巡回路线；环行 [ˈsɜːrkɪt]
+- circuit [ˈsɜːrkɪt]
+    - n. 电路，线路；巡回路线；环行 
     - circu- 圈，环
     - A break in the circuit caused the lights to go out.
     - circuit judge 巡回法官
@@ -117,8 +117,8 @@
         - finally
         - fine
         - final
-- fishery
-    - n. 渔场 [ˈfɪʃəri]
+- fishery [ˈfɪʃəri]
+    - n. 渔场 
 - fun
     - adj. 有趣的
 - green
@@ -130,8 +130,8 @@
     - adj. 复合的；多种多样的
     - multi- 多
         - multiform 多样的
-- muscle
-    - n. 肌肉；力量；实力；体力 [ˈmʌsl]
+- muscle [ˈmʌsl]
+    - n. 肌肉；力量；实力；体力 
 - narrow
     - adj. 狭窄的；狭隘的；勉强的； v. 使变窄；缩小
     - a narrow concept 一个狭隘的概念
@@ -154,8 +154,8 @@
     - It originally retailed at $23.5.
     - retailer n. 零售商
     - detail n. 细节
-- scene
-    - n. 场面；情景；现象 [siːn]
+- scene [siːn]
+    - n. 场面；情景；现象 
     - The team's victory(胜利) produced scenes of joy(喜悦) all over the country.
 - sea
     - n. 海；海洋(靠近陆地的)
@@ -182,8 +182,8 @@
     - in addition 此外，进一步说（不同方面的递进）
         - indeed adv. 真正地，当然；确实（同一方面递进）
     - additional adj. 额外的；附加的
-- weak
-    - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的 [wiːk]
+- weak [wiːk]
+    - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的 
     - who are physically weak or crippled(跛的)
     - the weak lecture 糟糕的演讲
     - weaken v. 使虚弱；减弱
@@ -209,8 +209,8 @@
 - pencil
 - restaurant
     - n. 餐馆；饭店
-- boring
-    - adj. 没趣的；令人厌倦的 [ˈbɔːrɪŋ]
+- boring [ˈbɔːrɪŋ]
+    - adj. 没趣的；令人厌倦的 
     - bored adj. 厌倦的；烦闷的
     - boring vs bored
         - boring 修饰物 boring game
@@ -226,8 +226,8 @@
     - n. 望远镜
     - tele- 远
         - telephone
-- chemical
-    - adj. 化学的； n. 化学制品 [ˈkemɪkl]
+- chemical [ˈkemɪkl]
+    - adj. 化学的； n. 化学制品 
     - ...a woman's increased dose of stress chemicals... 女性体内压力化学物质的增加
 - nine
 - mood
@@ -254,8 +254,8 @@
     - adv. 稍微，有一点
 - telephone/phone
     - n. 电话； v. 打电话
-- audience
-    - n. 听众，观众，读者 [ˈɑːdiəns]
+- audience [ˈɑːdiəns]
+    - n. 听众，观众，读者 
     - audi- 听
         - audit n. 审计，审查
     - Who are your most important audiences?
@@ -269,8 +269,8 @@
     - n. 维生素
     - vit- 生命
     - **vital** adj. 生死攸关的，至关重要的
-- spouse
-    - n. 配偶 [spaʊs]
+- spouse [spaʊs]
+    - n. 配偶 
     - In Cambodia(柬埔寨), the choice of a spouse is a complex one for the young male.
 - trip
 - request
@@ -296,16 +296,16 @@
 - stuff
     - n. 原料，材料(== thing)； vt. 填进，塞满
     - stuffed animals 动物玩偶
-- diary
-    - n. 日记本 [ˈdaɪəri]
+- diary [ˈdaɪəri]
+    - n. 日记本 
     - di- 日子
         - diet n. 日常饮食； vi. 节食
 - pretty
     - adv. 相当，很； adj. 漂亮的
     - a pretty girl(n.)
     - Most folks(伙计们) still feel pretty comfortable(adj.).
-- grammar
-    - n. 语法（书） [ˈɡræmər]
+- grammar [ˈɡræmər]
+    - n. 语法（书） 
     - gram- 刻；写
         - program n. 程序
         - diagram n. 图表
@@ -318,8 +318,8 @@
     - rad- 根
         - eradicate v. 根除
     - The information was transmitted by radio.
-- evil
-    - adj. 邪恶的，有害的； n. 邪恶，罪恶 [ˈiːvl]
+- evil [ˈiːvl]
+    - adj. 邪恶的，有害的； n. 邪恶，罪恶 
     - live -> evil
 - lecture
     - n./v. 演讲，训诫
@@ -368,8 +368,8 @@
     - mot- 动
         - motor n. 发动机
         - motion n. 移动
-- guard
-    - n. 卫兵； vt. 守卫；看守 [ɡɑːrd]
+- guard [ɡɑːrd]
+    - n. 卫兵； vt. 守卫；看守 
     - guardian n. 保护者；守卫者
     - -ian 专业的人
         - historian 历史学家
