--- a/postgraduate/word/simple-word/markdown/p24-p26.md
+++ b/postgraduate/word/simple-word/markdown/p24-p26.md
@@ -26,7 +26,7 @@
     - The researchers mapped the city's vast(广阔的) areas.
 - deeply
     - adv. 很；非常；极其（表示强调）
-    - Beethoven was a deeply political man...
+    - Beethoven was a deeply political man... 贝多芬是一个极其具有政治色彩的人
 - foot
     - n.（pl. feet）脚；英尺
     - 英尺
@@ -139,7 +139,7 @@
 - flu
     - n. 流感；流行性感冒
     - swine flu 猪流感
-    - epidemic adj. 流行的； n. 流感
+    - epidemic adj. 流行的； n. 流感 [ˌepɪˈdemɪk]
 - false
     - adj. 错误的；虚伪的；不实的
     - falsely adv. 错误地，不实地
@@ -157,10 +157,11 @@
 - holiday
     - n. 假期；假日
 - heaven
-    - n. 天堂；(pl.)天空；乐事
+    - n. 天堂；(pl.)天空；乐事 [ˈhevn]
     - Europe is not a gender-equality heaven.
+    - heavy adj. 重的 [ˈhevi]
 - belt
-    - n. 腰带；皮带；地带；地区
+    - n. 腰带；皮带；地带；地区 [belt]
     - They do some modest belt-tightening.
     - safety belt 安全带
     - conveyor belt 传送带
@@ -178,7 +179,7 @@
     - 语气，语调
         - softened(软化) his tone and adopted(采用) some new policy.
     - 张力
-        - decreasing muscle(肌肉) tone
+        - decreasing muscle(肌肉, [ˈmʌsl]) tone
 - proud
     - adj. 骄傲的，傲慢的
     - be proud of 对...感到骄傲
@@ -194,7 +195,7 @@
     - n. 舒适；安慰 vt. 使舒适；安慰
     - comfortable adj. 舒适的
 - teenager
-    - n. 青少年
+    - n. 青少年 [ˈtiːneɪdʒər]
     - teenage adj. 青少年的，十几岁的
 - during
     - prep. 在...期间
@@ -210,7 +211,7 @@
     - n. 小溪，溪流
     - The tourist(游客) streams are not entirely separate(分离).
 - previous
-    - adj. 先前的，以往的
+    - adj. 先前的，以往的 [ˈpriːviəs]
     - According to Paragraph 1，most previous surveys(调查) found that home
     - previously adv. 事先；以前
 - actively
@@ -271,8 +272,9 @@
 - nervous
     - adj. 焦虑的；紧张的
 - wild
-    - adj. 野生的；荒凉的
-    - mild adj. 温和的
+    - adj. 野生的；荒凉的 [waɪld]
+    - mild adj. 温和的 [maɪld]
+    - wide adj. 宽的 [waɪd]
 - mobile
     - n. 移动电话； adj. 非固定的
     - mov- == mob- == mot- 移动
@@ -291,7 +293,7 @@
         - fore- 在...之前
             - before prep.
 - tiny
-    - adj. 极小的，微小的
+    - adj. 极小的，微小的 [ˈtaɪni]
 - borrow
     - vt. 借，借入
     - lend 借出
@@ -337,7 +339,7 @@
     - 一段时间
         - bringing prominence(名声) for a spell
 - wheel
-    - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转
+    - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转 [wiːl]
     - ferries wheel 摩天轮
     - wheelchair 轮椅
     - 轮子
@@ -367,7 +369,7 @@
     - sadness n. 悲伤；悲痛
     - sadly adv. 令人遗憾；不幸地
 - wing
-    - n. 翼（建筑物），翅膀
+    - n. 翼（建筑物），翅膀 [wɪŋ]
     - The building slowly rose wing by wing. 这栋建筑逐渐建成，一翼一翼地加上去
 - fee
     - n. 费用
@@ -398,7 +400,7 @@
     - 运送
         - If a business was shipping a customer's purchase to a state...
 - vice
-    - n. 缺点，弱点；邪恶；道德败坏
+    - n. 缺点，弱点；邪恶；道德败坏 [vaɪs]
     - Idleness(懒惰) is not just a vacation, an indulgence(沉溺) or a vice.
 - visa
     - n. 签证
