--- a/postgraduate/word/simple-word/markdown/p27-p29.md
+++ b/postgraduate/word/simple-word/markdown/p27-p29.md
@@ -1,33 +1,33 @@
 # p27-p29
 
-- trail
-    - vi. （被）拖； vt. 跟踪，追踪； n. **小径；痕迹**
+- trail [treɪl]
+    - n. **小径；痕迹** vi. （被）拖； vt. 跟踪，追踪
     - tra- 拖着
     - 痕迹
         - The use of electronic means of payment leaves an electronic trail.
-- coach
-    - n. **教练**；长途汽车； vt. **训练，指导** [koʊtʃ]
+- coach [koʊtʃ]
+    - vt. **训练，指导** n. **教练**；长途汽车
     - n. 教练
         - I'm a coach，and you're my team，and we're in this together.
     - vt.
-        - ...to coach lawyers on the shifting(转移) landscape for patents(专利). 指导律师们应对不断变化的专利领域
-- theater
-    - n. 戏剧，剧院 [ˈθiːətər]
-    - The professional companies prospered in their permanent theaters. 这些专业剧团在他们固定的剧院里兴盛起来
+        - ...to coach lawyers on the shifting(转移) landscape([ˈlændskeɪp]) for patents([ˈpætnt] 专利). 指导律师们应对不断变化的专利领域
+- theater [ˈθiːətər]
+    - n. 戏剧，剧院 
+    - The professional companies prospered in their permanent([ˈpɜːrmənənt]) theaters. 这些专业剧团在他们固定的剧院里兴盛起来
 - backward
     - adj. 向后的； adv. 向后
 - spring
     - n. 春天； vi. 涌现（spring up）
     - spr- 迸发
-    - spread v./n. 传播，散布
+    - spread [spred] v./n. 传播，散布
 - taste
     - n. 味道；**鉴赏力；品味** vt. 品尝
     - 品味
         - He has an expensive taste of lifestyle.
     - distasteful adj. 令人讨厌的，令人厌恶的
         - Accepting favors in return for opening doors is "distasteful".
-- via
-    - prep. 经由 == by [ˈviːə]
+- via [ˈviːə]
+    - prep. 经由 == by 
     - The current immigration(移民) system in the US has been fixed via political means(方法).
 - vocabulary
     - n. 词汇量
@@ -50,21 +50,21 @@
         - Some Congress members are trying to block the plan.
 - twelve
 - unclear
-- gallery
+- gallery [ˈɡæləri]
     - n. 走廊；画廊，美术馆
-- shut
+- shut [ʃʌt]
     - v. 关，闭
     - shut out 把...拒之门外
-        - ...<u>shut out</u> the feverish(狂热的、极度兴奋的) fashion world 把那个狂热的时尚世界关在门外
+        - ...<u>shut out</u> the feverish([ˈfiːvərɪʃ] 狂热的、极度兴奋的) fashion world 把那个狂热的时尚世界关在门外
     - shut down 闭店，关门
         - As much of Mexico City <u>shut down</u> at the height of a panic(恐慌)...
     - shut up 闭嘴
         - We are <u>shut up</u> in schools.
-- truck
+- truck [trʌk]
     - n. 卡车
     - tra- == tru- 拖着
-- linguist
-    - n. 语言学家；通晓数国语言的人 [ˈlɪŋɡwɪst]
+- linguist [ˈlɪŋɡwɪst]
+    - n. 语言学家；通晓数国语言的人 
     - lingu- 语言
         - bilingual adj. 双语的 [ˌbaɪˈlɪŋɡwəl]
 - goods
@@ -84,25 +84,25 @@
     - n. 汽车
     - auto- 自动
     - motor/car/**vehicle** [ˈviːəkl ] 汽车
-        - Rules require auto companies to <u>bring</u> their vehicles <u>into compliance</u>. 法规要求汽车公司使他们的车辆符合法规要求
+        - Rules require auto companies to <u>bring</u> their vehicles <u>into compliance([kəmˈplaɪəns])</u>. 法规要求汽车公司使他们的车辆符合法规要求
             - bring...into compliance 使...符合（规定、标准、法规）
-- alcohol
-    - n. 酒精；含酒精的饮料 [ˈælkəhɔːl]
+- alcohol [ˈælkəhɔːl]
+    - n. 酒精；含酒精的饮料 
 - route
     - n. 路线，路程
     - Think about diving a route that's very familiar.
     - routine n. 常规，惯例
 - childless
     - adj. 没有子女的
-- insect
-    - n. 昆虫，虫 [ˈɪnsekt]
+- insect [ˈɪnsekt]
+    - n. 昆虫，虫 
     - sect- 切
         - section n. 章节
 - mankind
     - n. 人类
 - cast
     - vt. **投射；扔，投掷**；n. **投，抛**；铸型
-    - casting a wistful(智慧的) glance
+    - casting a wistful([ˈwɪstfəl] 智慧的) glance
     - cast- 投
 - tag
     - n. 标签，品牌； vt. 给...加标签
@@ -137,34 +137,34 @@
         - listen 注重动作
 - bright
     - adj. **明亮的**；鲜艳的；聪明的；有希望的
-- pioneer
-    - n. **先驱者，创始人**；vt. 开拓 [ˌpaɪəˈnɪr]
+- pioneer [ˌpaɪəˈnɪr]
+    - n. **先驱者，创始人**；vt. 开拓 
     - pion- == pin- 针
 - mouth
     - n. 口，嘴巴
     - mouse 老鼠
 - vegetable
-- surprisingly
+- surprisingly [sərˈpraɪzɪŋli]
     - adv. 惊人地
-- punish
-    - vt. 惩罚，处罚 [ˈpʌnɪʃ]
-    - Some people were to be punished by imprisonment(监禁) or even death.
+- punish [ˈpʌnɪʃ]
+    - vt. 惩罚，处罚 
+    - Some people were to be punished by imprisonment([ɪmˈprɪznmənt] 监禁) or even death.
 - cartoon
     - n. 漫画；动画片
-- praise
-    - n./vt. 赞美，称赞 [preɪz]
+- praise [preɪz]
+    - n./vt. 赞美，称赞 
         - Japanese education is praised for helping the young climb the social ladder(阶梯).
-    - raise 举起，提升
+    - raise [reɪz] 举起，提升
 - slightly
     - adv. 略微；稍微
-    - ...so talk tentatively and slightly
+    - ...so talk tentatively([ˈtɛntətɪvlɪ] adv. 试验性地，暂时地; 权; 聊且) and slightly
 - stone
     - n. 石头
 - photo/photograph
     - n. 照片，相片
     - picture 图画，照片
-- instrument
-    - n. 仪器，器械，工具；乐器 [ˈɪnstrəmənt]
+- instrument [ˈɪnstrəmənt]
+    - n. 仪器，器械，工具；乐器 
     - stru- 建造
         - structure n. 结构
         - construct v. 构造
@@ -172,8 +172,8 @@
         - Hot spots provide the measuring instruments. 热点提供了测量工具
     - 乐器
         - classical instruments 古典乐器
-- valley
-    - n. 山谷，溪谷 [ˈvæli]
+- valley [ˈvæli]
+    - n. 山谷，溪谷 
     - Silicon([ˈsɪlɪkən]) Valley 硅谷
 - fold
     - n. 褶皱； v. 折叠
@@ -181,13 +181,13 @@
 - flu/influenza
     - n. 流感
     - flow 流
-    - epidemic adj. 流行的；n. 流感 [ˌepɪˈdemɪk]
+    - epidemic [ˌepɪˈdemɪk] adj. 流行的；n. 流感 
 - nose
 - surgery
     - n. 外科，外科手术
     - sur- 在..之上
-    - surgeon n. 外科医生 [ˈsɜːrdʒən]
-- dose
+    - surgeon [ˈsɜːrdʒən] n. 外科医生 
+- dose [doʊs]
     - n. 剂量，一剂；一份
         - More than three million doses were to be made available in early October 2009...
     - dot 点
@@ -198,7 +198,7 @@
 - deem
     - vt. 认为，视为
     - 视为: deem == think == consider
-    - Mauna Kea is deemed as an ideal astronomical(天文) site.
+    - Mauna Kea is deemed as an ideal astronomical([ˌæstrəˈnɑːmɪkl] 天文) site.
 - costly
     - adj. 昂贵的，代价高的
     - cost n. 成本，v. 花费
@@ -206,30 +206,30 @@
 - hall
     - n. 门厅；大厅
     - music hall
-- bone
-    - n. 骨，骨骼 [boʊn]
-- doom
-    - vt. 命定，注定； n. 厄运，劫数 [duːm]
+- bone [boʊn]
+    - n. 骨，骨骼 
+- doom [duːm]
+    - vt. 命定，注定； n. 厄运，劫数 
     - 厄运
         - Policymakers could avoid the forecasted(预测) doom and may even see progress. 政策制定者可能避免预测中的厄运，甚至还能看到进展
     - mood n. 心情，情绪
-- sacrifice
-    - n./vt. 牺牲；献祭 [ˈsækrɪfaɪs]
-- pour
-    - vt. 倒，灌；注；vi. 倾泻 [pɔːr]
+- sacrifice [ˈsækrɪfaɪs]
+    - n./vt. 牺牲；献祭 
+- pour [pɔːr]
+    - vt. 倒，灌；注；vi. 倾泻 
     - It never rains but it pours. 祸不单行
     - 全身心投入
         - Imagining you are pouring your heart out to someone.
     - They spend the night <u>pouring cash into(投入大量资金到某个项目、产业或地方)</u> the hotels and restaurants.
       他们整晚把钱花在酒店和餐馆上
-- doubtful
-    - adj. 拿不定主意的，不确定的；怀疑的 [ˈdaʊtfl]
+- doubtful [ˈdaʊtfl]
+    - adj. 拿不定主意的，不确定的；怀疑的 
     - dou- 两个
         - double
     - doubt n. 怀疑
     - 出现在阅读题的作者态度题中是必错选项
-- disaster
-    - n. 灾难，大祸 [dɪˈzæstər]
+- disaster [dɪˈzæstər]
+    - n. 灾难，大祸 
 - tourist
     - n. 旅游者，观光者
     - tour v. 旅游，游历
@@ -238,20 +238,20 @@
     - adj. 值得的（worthy of）；值得尊敬的
     - worth n. 价值，意义； adj. 值得的
         - be worth doing sth. 值得做sth.
-            - It <u>is worth making</u> an important distinction(区别).
+            - It <u>is worth making</u> an important distinction([dɪˈstɪŋkʃn] 区别).
     - worthless adj. 没用的，无价值的
 - newsroom
     - n. 新闻编辑室
 - blow
-    - v. **吹；吹气**；爆炸； n. **打击**
+    - n. **打击** v. **吹；吹气**；爆炸；
     - 吹气
         - What happens when the wind doesn't blow or the sun doesn't shine？
     - 打击
-        - ...avoiding(避免) a blow to their reputations(声誉)...
+        - ...avoiding(避免) a blow to their reputations([ˌrepjuˈteɪʃn] 声誉)...
 - arm
     - n. 手臂，扶手；（pl.）武器； vt. 装备
     - 武装
-        - He used the weapons(武器) to arm his men.
+        - He used the weapons(['wepənz] 武器) to arm his men.
 - phase
     - n. 阶段，时期；
     - phase == period 时期
@@ -260,15 +260,15 @@
     - n. 羞耻；可耻的人或事
     - It would be a shame to raise prices too much.
 - queen
-- favorite/favourite
+- favorite/favourite [ˈfeɪvərɪt]
     - adj. 特别喜爱的 n. 偏袒；特别喜爱的人或事
     - 偏袒 play favorites
         - Official must not be allowed to <u>play favorites</u> in providing information...
 - supermarket
 - bold
     - adj. **勇敢的；鲁莽的**；黑体的
-    - ...bold imagination and scientific accuracy(准确性).
-- steadily
+    - ...bold imagination and scientific accuracy([ˈækjərəsi] 准确性).
+- steadily [ˈstɛdəlɪ]
     - adv. 稳定地；稳固地
     - steady adj. 稳定的；持续的
         - Its funding(资金) has enjoyed a steady increase.
@@ -282,8 +282,8 @@
 - band
     - n. **乐队；带**；vt. 用带绑扎
     - band-aid 邦迪创可贴；临时补救
-- solely
-    - adv. 仅；只；唯；单独地 [ˈsoʊlli]
+- solely [ˈsoʊlli]
+    - adv. 仅；只；唯；单独地 
     - sol- 太阳，独自
         - solar adj. 太阳的
     - Few Americans <u>attribute</u> this solely <u>to</u> such obvious causes. 很少有美国人把这完全归因于如此明显的原因
@@ -296,13 +296,13 @@
     - vt. 具体说明；具体指定
     - spect- == spec- 看
     - ...specifying the details of the project.
-    - **specific** adj. 具体的；特定的
+    - **specific** [spəˈsɪfɪk] adj. 具体的；特定的
 - tighten
     - v. 使变紧
 - jam
     - n. **拥挤，堵塞；果酱** v. 将...塞入
     - **traffic jam** 交通拥堵
-    - strawberry jam 草莓果酱
+    - strawberry([ˈstrɔːberi]) jam 草莓果酱
     - 将...塞入
         - He jammed the boxes into the back of the car.
 - openly
@@ -320,12 +320,12 @@
     - quite adv. 非常，相当 == very
 - headline
     - n. 标题，大字标题
-- plenty
-    - n. 丰富，大量 [ˈplenti]
+- plenty [ˈplenti]
+    - n. 丰富，大量 
     - ple- == plen- == plet- == pli- == full/fill 满，填满
         - complete
     - plenty of 大量的 + 可数n./不可数n.
-        - There's plenty of incentive(不可数n.) to ditch print.
+        - There's plenty of incentive([ɪnˈsentɪv] 不可数n.) to ditch print.
         - Plenty of other species(可数n.) are able to learn.
 - wash
     - vt. 洗
@@ -333,7 +333,7 @@
     - adj./adv. 世界范围的，全世界的
 - mentally
     - adv. 精神上；智力上；思想上
-    - mental adj. 精神的；智力的；思想的
+    - mental [ˈmentl] adj. 精神的；智力的；思想的
         - ment- == mind- 想
         - mental health 心理健康
 - indifferent
@@ -345,26 +345,26 @@
     - adv. 确定地
     - sure adv./adj. 确定的，一定的
         - I'm sure you"ll get there in the end.
-- worm
-    - n. 虫；蠕虫 [wɜːrm]
+- worm [wɜːrm]
+    - n. 虫；蠕虫 
 - shopper
 - video
     - n. 录像，录像机
     - radio 收音机
-- prison
-    - n. 监狱 [ˈprɪzn]
+- prison [ˈprɪzn]
+    - n. 监狱 
     - imprison n. 囚禁
     - prisoner n. 囚犯
 - greenhouse
     - n. 温室，暖房
     - White House 白宫
-- straight
-    - adj. 直的，正直的； adv. 直接的 [streɪt]
+- straight [streɪt]
+    - adj. 直的，正直的； adv. 直接的 
     - str- 长长的
         - street
-    - His explanation(解释) was surprisingly straight up.
-- misery
-    - n. 痛苦，苦难（消极）[ˈmɪzəri]
+    - His explanation([ˌekspləˈneɪʃn] 解释) was surprisingly([sərˈpraɪzɪŋli]) straight up.
+- misery [ˈmɪzəri]
+    - n. 痛苦，苦难（消极）
     - miss 错过，想念
 - till
     - prep. 直到
@@ -391,24 +391,24 @@
     - n. 瓶子
 - rock
     - n. **岩石；摇滚乐**； v. 摇；摇动
-    - identifying(识别) a distinctive(独特的) rock or tree
+    - identifying(识别) a distinctive([dɪˈstɪŋktɪv] 独特的) rock or tree
     - rock and roll 摇滚
 - door
-- campus
+- campus [ˈkæmpəs]
     - n. 校园
     - school n. 学校
-- lest
-    - conj. 唯恐，免得 [lest]
+- lest [lest]
+    - conj. 唯恐，免得 
     - lest == for fear that == in case
         - 在完形填空中一般是错误选项
-    - They should be quick to respond to letters to the editor，lest animals rights misinformation(误传) go unchallenged.
+    - They should be quick to respond to letters to the editor，lest animals rights misinformation([ˌmɪsɪnfə'meɪʃn] 误传) go unchallenged.
       他们应该迅速回复给编辑的来信，以免动物权利方面的错误信息无人质疑
 - chicken
     - n. 小鸡，肌肉
     - hen n. 母鸡
     - cock n. 公鸡
-- fierce
-    - adj. 凶猛的；猛烈的；狂暴的 [fɪrs]
+- fierce [fɪrs]
+    - adj. 凶猛的；猛烈的；狂暴的 
     - fierce competition 激烈的竞争
 - joy
     - n. 喜悦，乐事
@@ -417,7 +417,7 @@
 - founder
     - n. 建立者
     - found v. 建立；创建
-        - A new kind of philosophy(哲学) (founded in reason(理性)) was born.
+        - A new kind of philosophy([fəˈlɑːsəfi] 哲学) (founded in reason(理性)) was born.
         - find-found
     - foundation n. 建立，基金会
 - mirror
@@ -427,15 +427,15 @@
         - miracle n. 奇迹 [ˈmɪrəkl]
 - myth
     - n. 神话
-    - <u>They perpetuate(他们使...延续/维持/长久存在)</u> the myth of the lone genius.
-- cotton
-    - n. 棉花；棉线 [ˈkɑːtn]
+    - <u>They perpetuate([pərˈpetʃueɪt] 他们使...延续/维持/长久存在)</u> the myth of the lone genius.
+- cotton [ˈkɑːtn]
+    - n. 棉花；棉线 
     - Adam Davidson relates(叙述) a joke from <u>cotton country(美国)</u>.
 - unrealistic
     - adj. 不切实际的；不真实的
 - insecurity
     - n. 不安全，危险，不可控
-    - security n. 安:全；安全工作
+    - security [sɪˈkjʊrəti] n. 安全；安全工作
         - 安全 security == safety
         - safety and security
-    - secure adj. 安全的
+    - secure [sɪˈkjʊr] adj. 安全的
