--- a/postgraduate/word/simple-word/markdown/p33-p35.md
+++ b/postgraduate/word/simple-word/markdown/p33-p35.md
@@ -2,8 +2,8 @@
 
 - memorize
     - v. 记忆；记住
-- treasury
-    - n. 宝库；**财政部(Treasury)** [ˈtreʒəri]
+- treasury [ˈtreʒəri]
+    - n. **财政部(Treasury)**，宝库
     - **treasure** n. 宝库 [ˈtreʒər]
 - somehow
     - adv. 以某种方式
@@ -12,12 +12,12 @@
 - overseas
     - adv. 在海外； adj. 海外的
 - east
-- island
-    - n. 岛屿 [ˈaɪlənd]
+- island [ˈaɪlənd]
+    - n. 岛屿 
 - maker
     - n. 生产者；制造者；制定者
-- bless
-    - vt. 为...祈神赐福 [bles]
+- bless [bles]
+    - vt. 为...祈神赐福 
     - ...to bless the union.
     - blessing n. 祝福；好事
         - The ruling was a blessing to films and patients.
@@ -30,24 +30,24 @@
     - turn the corner 有转机，有好转
         - Everyone said，"just wait，you'll <u>turn the corner</u>，give it some time".
     - around the corner 出现
-        - A true cashless society is probably not <u>around the corner</u>.
+        - A true cashless society([səˈsaɪəti] n. 社会) is probably not <u>around the corner</u>.
 - sixty
-- clip
-    - v. **剪**，修剪； n. **片段**；回形针 [klɪp]
+- clip [klɪp]
+    - v. **剪**，修剪； n. **片段**；回形针 
     - 片段
         - Participants(参与者) watched shorter video clips.
     - 剪
         - You have to clip a paragraph to place it elsewhere.
-- jet
-    - n. 喷气式飞机；喷嘴；喷射 [dʒet]
+- jet [dʒet]
+    - n. 喷气式飞机；喷嘴；喷射 
     - ject- 扔，投掷
         - subject
         - object
         - reject
         - inject
     - jet aircraft 喷气式飞机
-- soil
-    - n. 泥土；土地 [sɔɪl]
+- soil [sɔɪl]
+    - n. 泥土；土地 
     - 燃烧oil，直到boil(沸腾)，倒进soil
 - plus
     - prep./n./adj. 加
@@ -56,20 +56,20 @@
         - add 9 to the total
 - symbol
     - n. 象征，标志，符号
-    - a symbol of the entrepreneurs'(企业家) wealth
-- portion
-    - n. 一份，一部分； vt. 分配，把...分给 [ˈpɔːrʃn]
+    - a symbol of the entrepreneurs'([ˌɑːntrəprəˈnɜːr] 企业家) wealth
+- portion [ˈpɔːrʃn]
+    - n. 一份，一部分； vt. 分配，把...分给 
     - 一份，一部分
         - Three portions of fish and chips，please.
     - 分配 portion out
         - Food was <u>portioned out</u> among(在...之中) the poor.
-    - portion vs part 整体当中的一部分
+    - portion vs part
         - part 整体当中的一部分
         - portion 个体能拿到的一部分
     - **proportion** n. 比例，比重
         - The proportion of studying by mobile phone is 59%.
-- frightened
-    - adj. 惊吓的，受惊的 [ˈfraɪtnd]
+- frightened [ˈfraɪtnd]
+    - adj. 惊吓的，受惊的 
     - fright n. 恐惧；
     - frighten v. 使...恐惧
     - fight v. 打仗
@@ -79,24 +79,24 @@
     - v. 重建，重组
 - July
     - n. 七月
-- starve
-    - v. 使挨饿，使饿死 [stɑːrv]
+- starve [stɑːrv]
+    - v. 使挨饿，使饿死 
     - ste- 僵硬
         - stern adj. 严厉的
-    - when's food？I'm starving
+    - when's food? I'm starving
 - artwork
     - n. 艺术品，美术品
-- silicon
-    - n. 硅 [ˈsɪlɪkən]
-    - Silicon Valley 硅谷
+- silicon [ˈsɪlɪkən]
+    - n. 硅 
+    - Silicon Valley([ˈvæli]) 硅谷
 - slip
     - vi. 滑倒，溜走；下降，跌落 vt. 使滑动
     - 滑倒
         - Slip outside and you could break a leg slipping on your doormat. 在门外滑一下，你可能会因为踩在门垫上打滑而摔断腿
-- disturb
-    - vt. 干扰，妨碍；搅乱 [dɪˈstɜːrb]
+- disturb [dɪˈstɜːrb]
+    - vt. 干扰，妨碍；搅乱 
     - turb- 转，搅拌
-        - turbine n. 涡轮机，汽轮机
+        - turbine [ˈtɜːrbaɪn] n. 涡轮机，汽轮机
     - They disturbed the power balance between different states.
 - recover
     - vi. **恢复，痊愈**； vt. 重新得到
@@ -105,15 +105,15 @@
     - n. 黑客
 - bodily
     - adj. 人体的，身体的
-- resume
-    - n. **摘要，概要；简历；** v. （中断后）重新开始，继续；恢复 [rɪˈzuːm]
+- resume [rɪˈzuːm]
+    - n. **摘要，概要；简历；** v. （中断后）重新开始，继续；恢复 
     - 摘要
         - AI looks at resumes in greater numbers than humans would be able to.
     - 继续
-        - She resumed her career after an interval of six years.
+        - She resumed her career([kəˈrɪr]) after an interval of six years.
     - sum- 拿，抓
-- pipe
-    - n. 管子，管道 [paɪp]
+- pipe [paɪp]
+    - n. 管子，管道 
 - **apologize/apologise**
     - vi. 道歉；认错
     - **apology** n. 道歉，认错
@@ -124,16 +124,16 @@
 - sunrise
     - n. 日出
 - document
-    - n. 公文，文件；证件； vt. **记录**
+    - vt. **记录** n. 公文，文件；证件
     - doc- == duc- 教育，引导
         - doctor
         - educate
     - The trend that Mr.McWhorter documents is unmistakable.
     - documentary n. 纪录片 adj. 记录的，纪实的；文献的； n. 纪录片
-- pupil
-    - n. 小学生；弟子 [ˈpjuːpl]
-- unity
-    - n. 团结，统一；和睦，和谐 [ˈjuːnəti]
+- pupil [ˈpjuːpl]
+    - n. 小学生；弟子 
+- unity [ˈjuːnəti]
+    - n. 团结，统一；和睦，和谐 
     - uni- 一个
         - university
 - pathway
@@ -144,8 +144,8 @@
 - nowhere
     - adv. 任何地方都不
     - Human Evolution Going Nowhere 人类的进化已经无路可走
-- diligent
-    - adj. 勤奋的，勤勉的 [ˈdɪlɪdʒənt]
+- diligent [ˈdɪlɪdʒənt]
+    - adj. 勤奋的，勤勉的 
     - diligence n. 勤奋
 - giver
     - n. 捐赠者；捐助机构
@@ -158,9 +158,9 @@
 - bed
     - n. **床**；花坛，苗圃；河床
 - brush
-    - n. 刷子，画笔；轻触；小冲突vt. 刷；vi. 触到；擦及
+    - n. 刷子，画笔；轻触；小冲突 vt. 刷；vi. 触到；擦及
     - 刷
-        - A century ago，few people regularly brushed their teeth multiple times.
+        - A century ago，few people regularly brushed their teeth multiple([ˈmʌltɪpl]) times.
     - 触到 brush against
         - He felt her hair <u>brushed against</u> his shoulder.
     - broom 笤帚
@@ -174,8 +174,7 @@
 - preferable
     - adj. 更可取的，更好的
         - it is preferable for sb. to do sth. 对于某人而言更可取的是去做某事
-            - It is preferable for journalists(记者) to rely(依靠) on their own notions(主张，看法) of significance(
-              重要性).
+            - It is preferable for journalists([ˈdʒɜːrnəlɪst] 记者) to rely(依靠) on their own notions(主张，看法) of significance(重要性).
     - prefer v. 更喜欢，较喜欢
         - prefer A to B 相比B更喜欢A
         - They prefer part-time jobs to full-time jobs.
@@ -183,7 +182,7 @@
     - vt. **招呼；称赞**；n. 雹；一阵；vi. 下雹
     - We hail them as Americans in the making...
 - chip
-    - n. 缺口，瑕疵；**芯片**；
+    - n. **芯片**，缺口，瑕疵；
     - ... dolls equipped with personality chips.
     - ship n. 船
 - enjoyment
@@ -204,10 +203,10 @@
     - adj. 外面的；外表的；外层的
 - educator
     - n. 教育工作者，教师；教育家
-- widen
-    - v. 拓宽；加宽 [ˈwaɪdn]
+- widen [ˈwaɪdn]
+    - v. 拓宽；加宽 
     - Tax policies are aimed at preventing the income gap form widening.
-- dairy
+- dairy [ˈderi]
     - n. 牛奶厂； adj. 奶制的
     - Most land is used for meat and <u>dairy production(奶制品)</u>.
 - mend
@@ -215,10 +214,9 @@
     - 修理，修补
         - The NHS trust has mended its ways.
 - September [sepˈtembər]
-- atmospheric
-    - adj. 大气层的，大气的 [ˌætməsˈferɪk]
-        - We must <u>press forward(推进/向前推进/大力开展)</u> on deeper atmospheric and oceanic(海洋 [ˌoʊʃiˈænɪk])
-          research.
+- atmospheric [ˌætməsˈferɪk]
+    - adj. 大气层的，大气的 
+        - We must <u>press forward(推进/向前推进/大力开展)</u> on deeper atmospheric and oceanic(海洋 [ˌoʊʃiˈænɪk]) research.
     - atmosphere n. 大气层；空气；环境 [ˈætməsfɪr]
 - pop
     - vi. 突然出现；爆开； n. 流行音乐
@@ -233,12 +231,12 @@
 - scan
     - vt./n. 浏览，扫描
     - brain-scan experiments
-- exact
-    - adj. 精确的，准确的 [ɪɡˈzækt]
+- exact [ɪɡˈzækt]
+    - adj. 精确的，准确的 
     - exactly adv. 恰恰，精确地
-        - But that's exactly the kind of false cheerfulness(开朗)...
-- fluid
-    - n. 流体； adj. 流动的，流体的 [ˈfluːɪd]
+        - But that's exactly the kind of false cheerfulness(['tʃɪrfəlnəs] 开朗)...
+- fluid [ˈfluːɪd]
+    - n. 流体； adj. 流动的，流体的 
     - fluid intelligence 流体智力
 - lip
     - n. 嘴唇
@@ -253,17 +251,17 @@
     - adj. 没有用的，无价值的
 - token
     - n. **代币；礼券**；adj. 象征性的，装样子的
-- coast
-    - n. **海岸，海滨**； v. 惯性滑行 [koʊst]
+- coast [koʊst]
+    - n. **海岸，海滨**； v. 惯性滑行 
 - neighbor
-- cousin
-    - n. 堂兄弟，表姐妹 [ˈkʌzn]
-    - Though not biologically(生物学上) related，friends are as "related" as fourth cousin.
+- cousin [ˈkʌzn]
+    - n. 堂兄弟，表姐妹 
+    - Though not biologically([ ˌbaɪəˈlɑːdʒɪkli] 生物学上) related，friends are as "related" as fourth cousin.
 - border
     - n. **界线；边境**； v. 给...加上边；接近
     - Its internal borders are open to goods, capital(资本) and labour.
-- festival
-    - n. 节日 [ˈfestɪvl]
+- festival [ˈfestɪvl]
+    - n. 节日 
     - Spring Festival 春节
     - Official Festival 官方的节日
 - mathematical
@@ -279,8 +277,8 @@
     - n. 青年
 - website
     - n. 网站
-- vain
-    - adj. 徒劳的，自负的 [veɪn]
+- vain [veɪn]
+    - adj. 徒劳的，自负的 
     - van- 空
         - vanish 消失
         - vanity 虚荣心
@@ -295,7 +293,7 @@
     - **not...anymore** 不再
 - throw
     - vt. 扔，投掷
-    - throw himself into a hobby 投入到一个习惯
+    - throw himself into a hobby([ˈhɑːbi]) 投入到一个习惯
 - romantic
     - adj. 浪漫的，有浪漫彩色的
 - storm
@@ -306,12 +304,12 @@
     - n. **集市，市场**；市场竞争
 - unusually
     - adv. 特别地，很(放在 adj. 之前表示强调)
-- alien
-    - adj. 外国的；**外国人的**；陌生的 n. **外国人**，外星人 [ˈeɪliən]
+- alien [ˈeɪliən]
+    - adj. 外国的；**外国人的**；陌生的 n. **外国人**，外星人 
 - anyway
     - adv. 无论如何
-- bang
-    - n. 爆炸声，猛击 [bæŋ]
+- bang [bæŋ]
+    - n. 爆炸声，猛击 
     - big bang 宇宙大爆炸理论
 - careless
     - adj. 不小心的；不仔细的
@@ -319,8 +317,8 @@
     - adj. 发怒的，愤怒的
     - anger n. 愤怒
         - ang- 弯
-- heroin
-    - 海洛因 [ˈheroʊɪn]
+- heroin [ˈheroʊɪn]
+    - 海洛因 
 - photographic
     - adj. 摄影的，摄制的；照片的
 - tour
@@ -338,26 +336,26 @@
     - n. 绅士；先生
 - beef
     - n. 牛肉
-- sink
-    - vi. 下沉；n. 水槽 [sɪŋk]
+- sink [sɪŋk]
+    - vi. 下沉；n. 水槽 
     - pink
 - boss
     - n. 老板； v. 指挥
-- furniture
-    - n. 家具 [ˈfɜːrnɪtʃər]
+- furniture [ˈfɜːrnɪtʃər]
+    - n. 家具 
     - Here was the raw material of houses and furniture...
-- seize
-    - vt. 抓住，夺取，占据 [siːz]
+- seize [siːz]
+    - vt. 抓住，夺取，占据 
     - se- 播种
         - seed n. 种子
     - ...seize every minute to work
-- digit
-    - n. 数字，数位 [ˈdɪdʒɪt]
+- digit [ˈdɪdʒɪt]
+    - n. 数字，数位 
     - digital
     - The <u>digit/number/amount/sum</u> of crimes id increasing.
 - anger
-- rescue
-    - vt./n. 营救 [ˈreskjuː]
+- rescue [ˈreskjuː]
+    - vt./n. 营救 
     - re强调 + s=ex + cue=cure
     - Two children were rescued from the burning car.
 - significantly
