--- a/postgraduate/word/simple-word/markdown/p30-p32.md
+++ b/postgraduate/word/simple-word/markdown/p30-p32.md
@@ -25,9 +25,9 @@
 - shoulder
     - n. 肩膀； vt. 承担；扛
     - shoulder to shoulder 肩并肩
-        - Two disabled(adj. 残) men are ruining <u>shoulder to shoulder</u>.
+        - Two disabled(adj. 残) men are running <u>shoulder to shoulder</u>.
     - 承担；扛
-        - <u>To some extent(在某种程度上)</u> the housing sector must shoulder the blame.
+        - <u>To some extent(在某种程度上)</u> *the housing sector* must shoulder the blame(责任).
 - freely
     - adv. 不受限制地；自由地
 - shoot
@@ -39,12 +39,12 @@
     - shoot - shot - shot
 - reshape
     - v. 重塑
-- tuition
-    - n. 教学，指导；学费 [tuˈɪʃn]
+- tuition [tuˈɪʃn]
+    - n. 教学，指导；学费 
 - subheading
     - n. 副标题，小标题
     - sub- 在...之下
-    - sur- 在...之上
+    - sur- 在...之上 surface
 - bread
     - n. 面包；生计，谋生之道
     - bur- == br- 烤，燃烧
@@ -53,20 +53,20 @@
 - basketball
 - hair
     - n. 头发，毛发
-- camp
-    - n. 野营，营地； vi. 露营 [kæmp]
+- camp [kæmp]
+    - n. 野营，营地； vi. 露营 
     - Suppose your university is going to host a <u>summer camp</u> for high school students.
         - summer camp 夏令营
-- lag
-    - vi. 拖后腿，走得慢 [læɡ]
+- lag [læɡ]
+    - vi. 拖后腿，走得慢 
     - Graduates from elite(精英) universities tend to lag behind the others <u>due to(由于)</u> decreased opportunities.
     - leg n. 腿
 - loser
-- coal
-    - n. 煤块 [koʊl]
+- coal [koʊl]
+    - n. 煤块 
     - cold
-- drought
-    - n. 干旱；旱灾 [draʊt]
+- drought [draʊt]
+    - n. 干旱；旱灾 
 - guess
     - v./n. 猜测；推测
 - reorganize
@@ -82,10 +82,10 @@
         - I shall define him as an individual.
     - 应该
         - I will be your God and you shall be my people.
-- chew
-    - v. 咀嚼，嚼碎 [tʃuː]
-- trillion
-    - num. 万亿；兆
+- chew [tʃuː]
+    - v. 咀嚼，嚼碎 
+- trillion [ˈtrɪljən]
+    - num. 万亿；兆 
     - billion 十亿
     - million 百万
     - 1(trillion),000(billion),000(million),000(thousand),000
@@ -96,34 +96,34 @@
         - terror n. 恐怖；可怕的人；恐怖的事
         - terrorist n. 恐怖分子
             - -ist ...的人，专业的人
-        - terrorism n. 恐怖主义
+        - terrorism n. 恐怖主义 [ˈtɛrəˌrɪzəm]
             - -ism ...主义
 - pound
     - n. 磅（重量）；英镑； v. 猛烈敲击
     - pend- 悬挂；花销
-- nasty
-    - adj. 令人讨厌的；险恶的；下流的
+- nasty [ˈnæsti]
+    - adj. 令人讨厌的；险恶的；下流的 
 - gold
     - n. 黄金；金色；adj. 金质的；金色的
     - gold rush 淘金热
     - golden adj. 金色的；金制的
-- shore
-    - n. 海滨； vt. 支持，支撑(shore up)
+- shore [ʃɔːr]
+    - n. 海滨； vt. 支持，支撑(shore up) 
     - The government used subsidies(津贴) to <u>shore (up)</u> farm prices.
     - share
 - funny
     - adj. 滑稽的；稀奇的；可笑的，稍感不适的
-- bury
-    - vt. 掩藏，掩埋 [ˈberi]
+- bury [ˈberi]
+    - vt. 掩藏，掩埋 
     - bur- == br- 燃烧
     - Archaeologists(考古学家) also may locate(定位) buried remains by using technologies.
-- cucumber
-    - n. 黄瓜 [ˈkjuːkʌmbər]
-- suburb
-    - n. 市郊；郊区
+- cucumber [ˈkjuːkʌmbər]
+    - n. 黄瓜 
+- suburb [ˈsʌbɜːrb]
+    - n. 市郊；郊区 
     - urban
-- enemy
-    - n. 敌人；敌国 [ˈenəmi]
+- enemy [ˈenəmi]
+    - n. 敌人；敌国 
     - They can identify(辨认) friends to cooperate with and enemies to avoid. 他们能够辨认出可以合作的朋友，以及需要回避的敌人
 - gate
     - n. 大门；入口；登机口
@@ -136,13 +136,13 @@
     - vt. 污染，弄脏
     - Some of the contents of this gas pollute the atmosphere(大气层).
     - pollution n. 污染物
-- charitable
-    - adj. 慈善事业的；慈善团体的
+- charitable [ˈtʃærətəbl]
+    - adj. 慈善事业的；慈善团体的 
     - charity n. 慈善事业
         - care- 关心
         - Buying gifts or giving to charity is often more pleasurable than purchasing(购买) things for oneself.
-- fossil
-    - n. **化石**；老顽固 [ˈfɑːsl]
+- fossil [ˈfɑːsl]
+    - n. **化石**；老顽固 
     - pos- == fos- 放置
     - The fossil record shows that many species(物种) have endured(持续存在/忍受/经受住) for millions of years.
 - float
@@ -155,10 +155,10 @@
 - movie
     - n. 电影
     - the movies 电影院
-- politically
+- politically [pəˈlɪtɪkl]
     - adv. 政治上
     - policy n. 政策
-    - political adj. 政治的
+    - political adj. 政治的 
 - sick
     - adj. 患病的；想吐的；腻烦的；厌恶的(sick of)
     - 生病的
@@ -174,10 +174,10 @@
     - Whenever I recite(背诵) words，I will think of my vocabulary teacher.
 - perfectly
     - adv. 完全地，十分
-- grocery
-    - n. 食品杂货店 [ˈɡroʊsəri]
-- creature
-    - n. 生物，人，动物 [ˈkriːtʃər]
+- grocery [ˈɡroʊsəri]
+    - n. 食品杂货店 
+- creature [ˈkriːtʃər]
+    - n. 生物，人，动物 
     - They are good-natured，cooperative creatures.
     - create v. 创造，产生
         - cre- 产生
@@ -186,8 +186,8 @@
     - lucky dog 幸运儿
     - luck n. 运气；好运
     - lock v. 锁
-- personnel
-    - n. 人员，**员工**；人事部门
+- personnel [ˌpɜːrsəˈnel]
+    - n. 人员，**员工**；人事部门 
     - ~~a/an personnel~~
 - servant
     - n. 仆人
@@ -195,10 +195,10 @@
 - alive
     - adj. 活着的；存在的；有活力的
     - ...stay alive，but have fewer children.
-- square
-    - n. **广场；平方**；正方形；adj. **平方的**；直角的 [skwer]
+- square [skwer]
+    - n. **广场；平方**；正方形；adj. **平方的**；直角的 
     - quar- 四
-        - quarter 四分之一
+        - quarter 四分之一 [ˈkwɔːrtər]
     - 平方
         - BMI equals <u>body mass(体重)</u> <u>divided by(除以)</u> the square of height.
 - fifth
@@ -209,8 +209,8 @@
     - honestly adv. 诚实地；正当地
 - poll
     - n. 民意测验；选举投票
-- youth
-    - n. 青春，青少年时代(不可数)；青年(可数) [juːθ]
+- youth [juːθ]
+    - n. 青春，青少年时代(不可数)；青年(可数) 
     - lead more youths into criminal behavior
     - young adj. 年轻的
 - ride
@@ -218,8 +218,8 @@
     - 骑车，骑马
         - Princes(王子) and princesses(公主) have day-jobs and ride bicycles，not horses(马匹).
     - She took some friends for a ride in the family car.
-- pause
-    - vi./n. 暂停，中止 [pɔːz]
+- pause [pɔːz]
+    - vi./n. 暂停，中止 
 - soft
     - adj. 软的；柔软的；轻柔的；柔和的；温和的；不含酒精的
     - soft passage 轻柔的乐章
@@ -238,20 +238,20 @@
         - He tore the letter in two.
     - 眼泪
         - They become sad when the tears begin to flow.
-- tobacco
-    - n. 烟草，烟叶 [təˈbækoʊ]
-- thesis
-    - n. 论文；论题 (pl. theses) [ˈθiːsɪs]
+- tobacco [təˈbækoʊ]
+    - n. 烟草，烟叶 
+- thesis [ˈθiːsɪs]
+    - n. 论文；论题 (pl. theses) 
     - theme + analysis
-- bother
-    - vt. 打扰；使不安
+- bother [ˈbɑːðər]
+    - vt. 打扰；使不安 
     - This has long bothered Policymakers in poor countries.
     - brother n. 兄弟
 - brown
     - adj. 棕色的，褐色的； n. 褐色
     - br- == bur- 燃烧
-- depict
-    - vt. 描绘，描写，描述 [dɪˈpɪkt]
+- depict [dɪˈpɪkt]
+    - vt. 描绘，描写，描述 
     - de 前缀 向下
     - pic- 描绘
         - picture
@@ -259,8 +259,8 @@
 - runner
 - lane
     - n. 小路，车道
-- puritan
-    - n. 禁欲者；苦行憎；**清教徒** [ˈpjʊrɪtən]
+- puritan [ˈpjʊrɪtən]
+    - n. 禁欲者；苦行憎；**清教徒** 
 - floor
     - n. 地板，地面
     - 地面 floor vs ground
@@ -274,12 +274,12 @@
     - Basically, the individual(个人) at this age loses childhood privileges(特权).
     - **base** n. 基础，底部； v. 把...基于(base on)
     - basic adj. 基本的，基础的
-- poet
-    - n. 诗人 [ˈpoʊət]
+- poet [ˈpoʊət]
+    - n. 诗人 
     - poetry n. 诗歌
     - poetic adj. 诗歌的
-- hunter
-    - n. 猎人；狩猎者
+- hunter [ˈhʌntər]
+    - n. 猎人；狩猎者 
     - **headhunter** n. 猎头
     - hurt v./n. 受伤
     - hunt v. 打猎
@@ -297,9 +297,9 @@
     - It's the hardest thing to take care of a teenager，have a job，pay the rent.
     - rental n. 租金
 - theirs
-- gum
-    - n. **口香糖**；牙龈；树胶
-    - chew gum 嚼口香糖
+- gum [ɡʌm]
+    - n. **口香糖**；牙龈；树胶 
+    - chew([tʃuː]) gum 嚼口香糖
 - thereby
     - adv. 因此，从而
     - 因此 thereby vs **therefore**
@@ -308,21 +308,21 @@
         - therefore 位于句首或者位于谓语动词附近
             - His analysis should therefore end any self-contentedness(指“对自己太满意、安于现状”的心态 -> 自满、自得).
             - Therefore, it is important to study humans.
-- ladder
-    - n. 梯子；阶梯；途径 [ˈlædər]
+- ladder [ˈlædər]
+    - n. 梯子；阶梯；途径 
     - Japanese education is praised(称赞) for helping the young climb the social ladder.
     - stairs 楼梯
     - lift(英)/elevator(美) 直梯
         - lift -> loft
 - monthly
-- clue
-    - n. 线索，提示 [kluː]
+- clue [kluː]
+    - n. 线索，提示 
     - These offer clues to the careers that will fit them best
 - questionable
     - adj. 可疑的；有问题的；未必准确的
     - question n. 问题； v. 提问
-- foresee
-    - vt. 预见，预料，预知 [fɔːrˈsiː]
+- foresee [fɔːrˈsiː]
+    - vt. 预见，预料，预知 
     - fore- 在...之前
     - forecast n./v. 预测，预料
         - cast- 投掷，扔
@@ -344,12 +344,12 @@
     - vt. 挖，掘； vi.挖掘；搜寻，寻找(dig for/into 搜寻)
     - Ground surveys(调查) allow archaeologists(考古学家) to pinpoint(查明) the places where digs will be successful.
       地面调查使考古学家能够查明哪些地点的挖掘会成功 -> 通过地面调查，考古学家能够精确确定哪些地方适合成功挖掘
-- shout
+- shout [ʃaʊt]
     - v./n. 呼喊，喊叫
     - shoot vi./vt. 射击
 - length
-- violence
-    - n. 暴力；猛烈 [ˈvaɪələns]
+- violence [ˈvaɪələns]
+    - n. 暴力；猛烈 
     - viol- 暴力
         - violent adj. 暴力的；猛烈的
         - violate v. 违背；冒犯
@@ -373,9 +373,9 @@
     - adj. 机器人的
     - rob- 力量
     - robot n. 机器人
-    - robust adj. 强壮的；耐用的，结实的
-- loan
-    - n. 贷款；借，贷款 [loʊn]
+    - robust adj. 强壮的；耐用的，结实的 [roʊˈbʌst]
+- loan [loʊn]
+    - n. 贷款；借，贷款 
     - housing loans 住房贷款
 - garment
     - n. 服装(pl.)；一件衣服
@@ -389,8 +389,8 @@
         - in the neighborhood of schools
     - neighbor/neighbour n. 邻居；邻近的人；邻国
         - their older neighbors
-- village
-    - n. 乡村；(the village)乡村居民 [ˈvɪlɪdʒ]
+- village [ˈvɪlɪdʒ]
+    - n. 乡村；(the village)乡村居民 
 - illness n. 疾病
 - click
     - v. 敲击，点击
@@ -401,8 +401,8 @@
 - clothing
 - joke
     - n. 笑话，玩笑
-- ceiling
-    - n. 天花板；最高限度，最高限额 [ˈsiːlɪŋ]
+- ceiling [ˈsiːlɪŋ]
+    - n. 天花板；最高限度，最高限额 
     - glass ceiling 狭义：女性在职场中受到的不公平的待遇 -> 广义：指所有弱势群体面临的“看不见的职业发展障碍”
         - They open the way to equality and they break through the glass ceiling. 
 - manpower
