--- a/postgraduate/write/001-020_letter.md
+++ b/postgraduate/write/001-020_letter.md
@@ -1,54 +1,93 @@
+## 001
+
+<p align="center">Notice</p>
+<p align="right">January 9, 2010</p>
+&emsp;&emsp;&emsp;&emsp;Volunteers are needed for the International Conference on Globalization to be held on this campus in early July.<br>
+&emsp;&emsp;&emsp;&emsp;Basic requirements are familiarity with the theme of the conference and proficiency in English. Other requirements include good interpersonal communication abilities, familiarity with our city's tourist attractions and its history, proper manners, and a strong sense of responsibility. Preference will be given to those experienced in international conferences or other similar activities.<br>
+&emsp;&emsp;&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries and encouraged; no visited please.<br>
+<p align="right">Postgraduates' Association</p>
+
 ## 002
 
 Dear Bob,<br>
-&emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm reception in the cultural exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful memories in my life.<br>
-&emsp;&emsp;&emsp;&emsp;I remember you mentioned wanting to travel in China. Well, if you come to China, You will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places you would like to visit.<br>
+&emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write
+a letter to you to thank you for your warm reception in the cultural exchange program. You and your family left a deep
+impression upon me. Indeed, the program is one of the most wonderful memories in my life.<br>
+&emsp;&emsp;&emsp;&emsp;I remember you mentioned wanting to travel in China. Well, if you come to China, You will be
+warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the
+places you would like to visit.<br>
 &emsp;&emsp;&emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
 
-## 003 
+## 003
 
 Dear friends,<br>
-&emsp;&emsp;&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend our heartfelt welcome to all the overseas students who will study in our university.<br>
-&emsp;&emsp;&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life is this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes, abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still provide ample opportunities to make friends. So, enjoy your life in this esteemed institute!<br>
-&emsp;&emsp;&emsp;&emsp;All in all, although there is a lot of pressure, the time you spend on our campus will be worthwhile and enhance your whole life. Hope you like it here.<br>
+&emsp;&emsp;&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend
+our heartfelt welcome to all the overseas students who will study in our university.<br>
+&emsp;&emsp;&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life is
+this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes,
+abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all
+those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still
+provide ample opportunities to make friends. So, enjoy your life in this esteemed institute!<br>
+&emsp;&emsp;&emsp;&emsp;All in all, although there is a lot of pressure, the time you spend on our campus will be
+worthwhile and enhance your whole life. Hope you like it here.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
-     
+
 ## 004
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online shore on January 1st, but after using it for a short period of time, I found it has some problems.<br>
-&emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
-&emsp;&emsp;&emsp;&emsp;Therefore, I would like either to change for another model that works better or a full refund. Your help is greatly appreciated.<br>
+&emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online shore on January 1st, but after using it for
+a short period of time, I found it has some problems.<br>
+&emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need
+to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small
+that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
+&emsp;&emsp;&emsp;&emsp;Therefore, I would like either to change for another model that works better or a full refund.
+Your help is greatly appreciated.<br>
 <p align="right">Yours sincerely</p>
 <p align="right">Zhang Wei</p>
 
-## 005 
+## 005
 
 Dear Professor Smith<br>
-&emsp;&emsp;&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our new judge.<br>
-&emsp;&emsp;&emsp;&emsp;As the core of our "Foreign Culture Festival", this school-wide contest is to be held in the Students' Auditorium on May 12 (next Sunday). And we believe that you can give our competitors some enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event will start at around 7:00 p.m. and last for 2 hours at most. At the end of it, we will have some hand-made presents for each judge and competitor.<br>
-&emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition. 
+&emsp;&emsp;&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our
+new judge.<br>
+&emsp;&emsp;&emsp;&emsp;As the core of our "Foreign Culture Festival", this school-wide contest is to be held in the
+Students' Auditorium on May 12 (next Sunday). And we believe that you can give our competitors some enlightening
+comments as both a native-English speaker and a knowledgeable professor. Specifically, the event will start at around 7:
+00 p.m. and last for 2 hours at most. At the end of it, we will have some hand-made presents for each judge and
+competitor.<br>
+&emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition.
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
 ## 006
 
 Dear Professor Cook,<br>
-&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
-&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the Forbidden City, was the imperial(皇帝的) palace of the Ming and Qing Dynasties. It is also the largest piece of ancient Chinese architecture currently existing. MeanWhile, the Great Wall, symbolizing China's ancient civilization, is one of the world's most renowned projects. As the great creation of the ancient Chinese people and one of the wonders of the world, it was listed as one of the world cultural heritage sites in 1987.<br>
-&emsp;&emsp;&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your stay in our city.<br>
+&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to
+recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
+&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the
+Forbidden City, was the imperial(皇帝的) palace of the Ming and Qing Dynasties. It is also the largest piece of ancient
+Chinese architecture currently existing. MeanWhile, the Great Wall, symbolizing China's ancient civilization, is one of
+the world's most renowned projects. As the great creation of the ancient Chinese people and one of the wonders of the
+world, it was listed as one of the world cultural heritage sites in 1987.<br>
+&emsp;&emsp;&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your
+stay in our city.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
 ## 007
 
 Dear Professor Smith,<br>
-&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and visiting you in Harvard University.<br>
-&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require surgery on the same day as my departure. I am sorry to say that I will therefore not be able to make the travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a situation does not usually happen, and apologize for any inconvenience this may cause you.<br>
-&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention to my suggestion would be highly appreciated.<br>
+&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and visiting you in Harvard
+University.<br>
+&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require
+surgery on the same day as my departure. I am sorry to say that I will therefore not be able to make the travel plan. If
+possible, I would like to postpone the travel plan to another day later this year. I promise that such a situation does
+not usually happen, and apologize for any inconvenience this may cause you.<br>
+&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention
+to my suggestion would be highly appreciated.<br>
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -56,19 +95,30 @@ Dear Professor Smith,<br>
 ## 008
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to present an oral report on an ancient Chinese scientist, Bi Sheng is an ideal candidate.<br>
-&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song Dynasty, Bi Sheng invented the movable type printing technique. He mainly used clay type, which saved much time and money compared with block printing. After that, the movable type printing technique was widely promoted. China's printing technique was spread to the Arabic region during the Yuan Dynasty and then to Africa and Europe. Printing provided a significant condition for the European science to develop rapidly after the long night of the medieval period and the emergence of the Renaissance.<br>
-&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful presentation.<br>
+&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to present an oral
+report on an ancient Chinese scientist, Bi Sheng is an ideal candidate.<br>
+&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song Dynasty, Bi Sheng invented the movable type
+printing technique. He mainly used clay type, which saved much time and money compared with block printing. After that,
+the movable type printing technique was widely promoted. China's printing technique was spread to the Arabic region
+during the Yuan Dynasty and then to Africa and Europe. Printing provided a significant condition for the European
+science to develop rapidly after the long night of the medieval period and the emergence of the Renaissance.<br>
+&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful
+presentation.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
 
-## 009 
+## 009
 
 Dear Paul,<br>
 &emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. Thank you for your enthusiastic response to the event!<br>
-&emsp;&emsp;&emsp;&emsp;As you know, I will invite a great many craftsmen to our comps. They will show a variety of innovative Chinese craft-making, especially silk-marking. Silk-marking is a handicraft inherited from ancient China, as well as a traditional art form. Silk is a symbol of ancient Chinese culture, and the long history of China's silk industry is a brilliant page in the encyclopedia of Chinese culture.<br>
-&emsp;&emsp;&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on May 1, 2025. Could you please help me to write the letters of invitation to all the craftsmen? Looking forward to your support.<br>
+&emsp;&emsp;&emsp;&emsp;As you know, I will invite a great many craftsmen to our campus. They will show a variety of
+innovative Chinese craft-making, especially silk-marking. Silk-marking is a handicraft inherited from ancient China, as
+well as a traditional art form. Silk is a symbol of ancient Chinese culture, and the long history of China's silk
+industry is a brilliant page in the encyclopedia of Chinese culture.<br>
+&emsp;&emsp;&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on
+May 1, 2025. Could you please help me to write the letters of invitation to all the craftsmen? Looking forward to your
+support.<br>
 
 <p align="right">Yours faithfully,</p>
 <p align="right">Li Ming</p>
@@ -76,9 +126,13 @@ Dear Paul,<br>
 ## 010
 
 Dear John,<br>
-&emsp;&emsp;&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-*Romance of the Three Kingdoms*. Now I am planning to direct a short play revised from it<br>
-&emsp;&emsp;&emsp;&emsp;*Romance of the Three Kingdoms*, as one of the Four Great Classical Novels in China, mainly depicts the political and military struggles during the Three Kingdoms Period and reveals the turbulent society. It successfully portrays images of classic characters, such as Zhuge Liang, Liu Bei, Guan Yu, Cao Cao, and so on.<br>
-&emsp;&emsp;&emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking forward to your reply.<br>
+&emsp;&emsp;&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-*Romance of the Three Kingdoms*.
+Now I am planning to direct a short play revised from it<br>
+&emsp;&emsp;&emsp;&emsp;*Romance of the Three Kingdoms*, as one of the Four Great Classical Novels in China, mainly
+depicts the political and military struggles during the Three Kingdoms Period and reveals the turbulent society. It
+successfully portrays images of classic characters, such as Zhuge Liang, Liu Bei, Guan Yu, Cao Cao, and so on.<br>
+&emsp;&emsp;&emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the
+leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking forward to your reply.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
